<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/c__groupcreation_top"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnJoinGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c__groupaction_margin"
            android:text="@string/join" />

        <Button
            android:id="@+id/btnUpdateGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c__groupaction_margin"
            android:text="@string/update" />
        
        <Button
            android:id="@+id/btnCreateGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c__groupaction_margin"
            android:text="@string/create" />
        
        <Button
            android:id="@+id/btnExitGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/c__groupaction_margin"
            android:text="@string/exit" />

    </LinearLayout>    

</LinearLayout>
